fixed placement of app store modals when the screen stretches beyond the max content area

--- a/src/css/mysavei.css
+++ b/src/css/mysavei.css
@@ -552,8 +552,8 @@ section#acorns-store-icon,
 section#robinhood-store-icon {
   box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.16);
   position: absolute;
-  left: 50vw;
-  top: 50vh;
+  left: 50%;
+  top: 50%;
   transform: translate(-50%, -50%);
   z-index: 50;
   width: 350px;
