--- a/src/scss/_apps-modal.scss
+++ b/src/scss/_apps-modal.scss
@@ -2,8 +2,8 @@ section#acorns-store-icon,
 section#robinhood-store-icon {
     box-shadow:$x8Shadow;
     position:absolute;
-    left: 50vw;
-    top: 50vh;
+    left: 50%;
+    top: 50%;
     transform: translate(-50%, -50%);
     z-index:50;
     width:350px;
